translate most of the files except tables

--- a/GuestHouseBackOffice.Frontend/public/locales/bg/translation.json
+++ b/GuestHouseBackOffice.Frontend/public/locales/bg/translation.json
@@ -1,4 +1,52 @@
 {
-  "welcome": "Добре дошли в нашето приложение!",
-  "create-booking" : "Създай резервация"
+  "welcome": "Добре дошли обратно в административния интерфейс на Къща за гости! Моля, въведете вашите данни по-долу, за да влезете.",
+  "createRequest" : "Създай резервация",
+  "month" : "Месец",
+  "year" : "Година",
+  "usernameValidation" : "Please input your username!",
+  "passwordValidation" : "Please input your password!",
+  "rememberMe" : "Remember me",
+  "submit" : "Submit",
+  "createTitle": "Създаване на нов {{type}}",
+  "expense": "разход",
+  "income": "приход",
+  "create" : "Създай",
+  "cancel" : "Откажи",
+  "eventDetails": "дати: {{startDate}} - {{endDate}}, брой хора: {{peopleCount}}",
+  "name" : "Име",
+  "requiredField" : "Задължително поле",
+  "comments" : "Коментари",
+  "amount" : "Сума",
+  "invalidAmount" : "Невалидни сума",
+  "createNewRequest" : "Създаване на нова заявка за резервация",
+  "clientName" : "Име на клиента",
+  "email" : "Email",
+  "phone" : "Телефон",
+  "startEndDate" : "От дата до дата",
+  "peopleCount" : "Брой хора",
+  "kidsCount" : "Брой деца",
+  "cityFrom" : "От град",
+  "oops" : "Ууупс!",
+  "errorOccured" : "Възникна грешка в приложението.",
+  "home" : "Начало",
+  "requests" : "Резервации",
+  "finances" : "Финанси",
+  "createIncome" : "Създай приход",
+  "createOutcome": "Създай разход",
+  "table" :  "Таблица",
+  "chart" : "Графика",
+  "months": {
+      "january": "Януари",
+      "february": "Февруари",
+      "march": "Март",
+      "april": "Април",
+      "may": "Май",
+      "june": "Юни",
+      "july": "Юли",
+      "august": "Август",
+      "september": "Септември",
+      "october": "Октомври",
+      "november": "Ноември",
+      "december": "Декември"
+    }
 }
