--- a/GuestHouseBackOffice.Frontend/public/locales/en/translation.json
+++ b/GuestHouseBackOffice.Frontend/public/locales/en/translation.json
@@ -1,4 +1,52 @@
 {
-  "welcome": "Welcome to our application!",
-  "create-booking" : "Create booking"
+  "welcome": "Welcome back to Guest House Admin UI! Please enter your details \n below to sign in.",
+  "createRequest" : "Create booking request",
+  "month" : "Month",
+  "year" : "Year",
+  "usernameValidation" : "Please input your username!",
+  "passwordValidation" : "Please input your password!",
+  "rememberMe" : "Remember me",
+  "submit" : "Submit",
+  "createTitle": "Creating a new {{type}}",
+  "expense": "expense",
+  "income": "income",
+  "create" : "Create",
+  "cancel" : "Cancel",
+  "eventDetails": "dates: {{startDate}} - {{endDate}}, people: {{peopleCount}}",
+  "name" : "Name",
+  "requiredField" : "Required field",
+  "comments" : "Comments",
+  "amount" : "Amount",
+  "invalidAmount" : "Invalid amount",
+  "createNewRequest" : "Create new booking request",
+  "clientName" : "Client name",
+  "email" : "Email",
+  "phone" : "Phone",
+  "startEndDate" : "From date to date",
+  "peopleCount" : "People count",
+  "kidsCount" : "Kids count",
+  "cityFrom" : "City from",
+  "oops" : "Oops!",
+  "errorOccured" : "Sorry, an unexpected error has occurred.",
+  "home" : "Home",
+  "requests" : "Requests",
+  "finances" : "Finances",
+  "createIncome" : "Create income",
+  "createOutcome": "Create outcome",
+  "table" :  "Table",
+  "chart" : "Chart",
+  "months": {
+      "january": "January",
+      "february": "February",
+      "march": "March",
+      "april": "April",
+      "may": "May",
+      "june": "June",
+      "july": "July",
+      "august": "August",
+      "september": "September",
+      "october": "October",
+      "november": "November",
+      "december": "December"
+    }  
 }
