add translations , language switcher and antd use effect to update language

--- a/GuestHouseBackOffice.Frontend/public/locales/bg/translation.json
+++ b/GuestHouseBackOffice.Frontend/public/locales/bg/translation.json
@@ -24,6 +24,7 @@
   "phone" : "Телефон",
   "startEndDate" : "От дата до дата",
   "peopleCount" : "Брой хора",
+  "adultsCount" : "Брой възрастни",
   "kidsCount" : "Брой деца",
   "cityFrom" : "От град",
   "oops" : "Ууупс!",
@@ -35,6 +36,13 @@
   "createOutcome": "Създай разход",
   "table" :  "Таблица",
   "chart" : "Графика",
+  "type" : "Тип",
+  "createdAt" : "Създадено на",
+  "startDate" : "Начална дата",
+  "endDate" : "Крайна дата",
+  "country" : "Страна",
+  "approved" : "Одобрено",
+  "approvedAt" : "Одобрено на",
   "months": {
       "january": "Януари",
       "february": "Февруари",
