--- a/GuestHouseBackOffice.Frontend/public/locales/en/translation.json
+++ b/GuestHouseBackOffice.Frontend/public/locales/en/translation.json
@@ -24,6 +24,7 @@
   "phone" : "Phone",
   "startEndDate" : "From date to date",
   "peopleCount" : "People count",
+  "adultsCount" : "adultsCount",
   "kidsCount" : "Kids count",
   "cityFrom" : "City from",
   "oops" : "Oops!",
@@ -35,6 +36,13 @@
   "createOutcome": "Create outcome",
   "table" :  "Table",
   "chart" : "Chart",
+  "type" : "Тype",
+  "createdAt" : "Created at",
+  "startDate" : "Start Date",
+  "endDate" : "End Date",
+  "country" : "Country",
+  "approved" : "Approved",
+  "approvedAt" : "Approved At",
   "months": {
       "january": "January",
       "february": "February",
