add translations to the screens and change language button

--- a/guesthouse_flutter/l10n/en.json
+++ b/guesthouse_flutter/l10n/en.json
@@ -1,5 +1,61 @@
 {
   "title": "Hello, World!",
   "loginTitle": "Login",
-  "greeting": "Welcome to Flutter Localization"
+  "greeting": "Welcome to Flutter Localization",
+  "email": "Email",
+  "enterEmail": "Enter email",
+  "password": "Password",
+  "enterPassword": "Enter password",
+  "newReservation": "New reservation",
+  "selectStartEndDate": "Select start and end date",
+  "name": "Name",
+  "enterName": "Enter name",
+  "phone": "Phone",
+  "startDate": "Start date",
+  "endDate": "End date",
+  "people": "People",
+  "adults": "Adults",
+  "kids": "Kids",
+  "city": "City",
+  "comment": "Comment",
+  "save": "Save",
+  "cancel": "Cancel",
+  "reservationsFromTo": "Reservations by range",
+  "addPeriod": "Add period",
+  "clear": "Clear",
+  "select": "Select",
+  "choosePeriod": "Choose a period",
+  "search": "Search",
+  "noResultsForSelectedRanges": "No results for the selected periods",
+  "addRangesTip": "Add one or more periods and press “Search”",
+  "noResults": "No results",
+  "hello": "Hello",
+  "reservations": "Reservations",
+  "showPassword": "Show password",
+  "hidePassword": "Hide password",
+  "errorLoadingRequests": "Error loading requests",
+  "tryAgain": "Try again",
+  "weekdayMonShort": "Mon",
+  "weekdayTueShort": "Tue",
+  "weekdayWedShort": "Wed",
+  "weekdayThuShort": "Thu",
+  "weekdayFriShort": "Fri",
+  "weekdaySatShort": "Sat",
+  "weekdaySunShort": "Sun",
+  "monthJanuary": "January",
+  "monthFebruary": "February",
+  "monthMarch": "March",
+  "monthApril": "April",
+  "monthMay": "May",
+  "monthJune": "June",
+  "monthJuly": "July",
+  "monthAugust": "August",
+  "monthSeptember": "September",
+  "monthOctober": "October",
+  "monthNovember": "November",
+  "monthDecember": "December",
+  "legendReservation": "Reservation",
+  "legendStart": "Start",
+  "legendEnd": "End",
+  "switchLanguage": "Switch language"
 }
