--- a/guesthouse_flutter/l10n/bg.json
+++ b/guesthouse_flutter/l10n/bg.json
@@ -1,5 +1,61 @@
 {
   "title": "Hola, Mundo!",
   "loginTitle": "Вход",
-  "greeting": "Bienvenido a la localización de Flutter"
+  "greeting": "Bienvenido a la localización de Flutter",
+  "email": "Имейл",
+  "enterEmail": "Въведете имейл",
+  "password": "Парола",
+  "enterPassword": "Въведете парола",
+  "newReservation": "Нова резервация",
+  "selectStartEndDate": "Изберете начална и крайна дата",
+  "name": "Име",
+  "enterName": "Въведете име",
+  "phone": "Телефон",
+  "startDate": "Начална дата",
+  "endDate": "Крайна дата",
+  "people": "Хора",
+  "adults": "Възрастни",
+  "kids": "Деца",
+  "city": "Град",
+  "comment": "Коментар",
+  "save": "Запази",
+  "cancel": "Отказ",
+  "reservationsFromTo": "Резервации от до",
+  "addPeriod": "Добави период",
+  "clear": "Изчисти",
+  "select": "Избор",
+  "choosePeriod": "Изберете период",
+  "search": "Търси",
+  "noResultsForSelectedRanges": "Няма резултати за избраните периоди",
+  "addRangesTip": "Добавете един или повече периоди и натиснете „Търси“",
+  "noResults": "Няма резултати",
+  "hello": "Здравей",
+  "reservations": "Резервации",
+  "showPassword": "Показване на парола",
+  "hidePassword": "Скриване на парола",
+  "errorLoadingRequests": "Грешка при зареждане на заявки",
+  "tryAgain": "Опитайте отново",
+  "weekdayMonShort": "Пн",
+  "weekdayTueShort": "Вт",
+  "weekdayWedShort": "Ср",
+  "weekdayThuShort": "Чт",
+  "weekdayFriShort": "Пт",
+  "weekdaySatShort": "Сб",
+  "weekdaySunShort": "Нд",
+  "monthJanuary": "Януари",
+  "monthFebruary": "Февруари",
+  "monthMarch": "Март",
+  "monthApril": "Април",
+  "monthMay": "Май",
+  "monthJune": "Юни",
+  "monthJuly": "Юли",
+  "monthAugust": "Август",
+  "monthSeptember": "Септември",
+  "monthOctober": "Октомври",
+  "monthNovember": "Ноември",
+  "monthDecember": "Декември",
+  "legendReservation": "Резервация",
+  "legendStart": "Начало",
+  "legendEnd": "Край",
+  "switchLanguage": "Превключи езика"
 }
